--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^2.5.1",
     "immutability-helper": "^3.1.1",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1",
