--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.0.0",
     "bootstrap": "^4.5.0",
+    "emailjs-com": "^2.6.3",
     "font-awesome": "^4.7.0",
     "framer-motion": "^2.5.1",
     "immutability-helper": "^3.1.1",
